Update environment configuration, dependencies, and authentication settings for Avalanche Scouting Data. Improved Discord OAuth setup, updated React and Framer Motion versions, and adjusted Vercel deployment commands.

--- a/env.example
+++ b/env.example
@@ -7,9 +7,13 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=your_nextauth_secret_key
 
-# Discord OAuth
+# Discord OAuth Configuration
+# Get these from https://discord.com/developers/applications
 DISCORD_CLIENT_ID=your_discord_client_id
 DISCORD_CLIENT_SECRET=your_discord_client_secret
 
 # The Blue Alliance API (optional)
 TBA_API_KEY=your_tba_api_key
+
+# For production deployment, update NEXTAUTH_URL to your domain
+# NEXTAUTH_URL=https://your-domain.vercel.app
