Add rewrites for API authentication and enhance NextAuth configuration with explicit production URL

--- a/vercel.json
+++ b/vercel.json
@@ -27,5 +27,11 @@
         }
       ]
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/auth/(.*)",
+      "destination": "/api/auth/$1"
+    }
   ]
 }
