--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/supabase-adapter": "^0.1.0",
     "@supabase/supabase-js": "^2.38.4",
     "clsx": "^2.0.0",
+    "dotenv": "^17.2.2",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.294.0",
     "next": "^15.5.2",
