--- a/vercel.json
+++ b/vercel.json
@@ -33,5 +33,8 @@
       "source": "/api/auth/(.*)",
       "destination": "/api/auth/$1"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
