--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@supabase/supabase-js": "^2.38.4",
     "@tanstack/react-table": "^8.21.3",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
@@ -36,17 +39,14 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.3.3",
     "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-config-next": "^15.5.2",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
-    "typescript": "^5.3.3"
+    "tailwindcss": "^3.3.6"
   }
 }
