--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "installCommand": "npm install --legacy-peer-deps",
+  "buildCommand": "npm run build",
+  "framework": "nextjs",
   "functions": {
     "pages/api/**/*.ts": {
       "maxDuration": 30
