--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "build:vercel": "npm run type-check && npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -39,7 +41,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3",
+    "typescript": "^5.9.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
@@ -48,5 +50,9 @@
     "eslint-config-next": "^15.5.2",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
