--- a/env.example
+++ b/env.example
@@ -12,6 +12,11 @@ NEXTAUTH_SECRET=your_nextauth_secret_key
 DISCORD_CLIENT_ID=your_discord_client_id
 DISCORD_CLIENT_SECRET=your_discord_client_secret
 
+# Discord Webhook for Error Notifications
+# Create a webhook in your Discord server: Server Settings > Integrations > Webhooks
+# Copy the webhook URL and paste it here
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/YOUR_WEBHOOK_ID/YOUR_WEBHOOK_TOKEN
+
 # The Blue Alliance API (optional)
 TBA_API_KEY=your_tba_api_key
 
