feat: Add Discord server configuration and enhance error handling in authentication flow
- Introduced DISCORD_SERVER_ID in environment configuration files for server verification.
- Updated ProtectedRoute and various pages to redirect unauthenticated users to the homepage instead of the sign-in page.
- Enhanced authentication callback to verify Discord server membership and handle access restrictions with appropriate error messages.

--- a/env.example
+++ b/env.example
@@ -12,6 +12,10 @@ NEXTAUTH_SECRET=your_nextauth_secret_key
 DISCORD_CLIENT_ID=your_discord_client_id
 DISCORD_CLIENT_SECRET=your_discord_client_secret
 
+# Discord Server Configuration
+# Get the server ID by right-clicking on your Discord server and selecting "Copy Server ID"
+DISCORD_SERVER_ID=1241008226598649886
+
 # Discord Webhook for Error Notifications
 # Create a webhook in your Discord server: Server Settings > Integrations > Webhooks
 # Copy the webhook URL and paste it here
