--- a/env.production.template
+++ b/env.production.template
@@ -14,6 +14,10 @@ NEXTAUTH_SECRET=your_nextauth_secret_key
 DISCORD_CLIENT_ID=1410224475592720499
 DISCORD_CLIENT_SECRET=z5hdVYza8753QdjB0FBmyNtSTfYxTiH3
 
+# Discord Server Configuration
+# Avalanche Discord server ID
+DISCORD_SERVER_ID=1241008226598649886
+
 # The Blue Alliance API (optional)
 TBA_API_KEY=your_tba_api_key
 
