--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
     "framer-motion": "^11.0.0",
-    "lucide-react": "^0.294.0",
-    "next": "^15.5.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "lucide-react": "^0.562.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.63.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
@@ -51,8 +51,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.55.0",
-    "eslint-config-next": "^15.5.2",
+    "baseline-browser-mapping": "^2.9.11",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
   },
