--- a/env.example
+++ b/env.example
@@ -12,8 +12,10 @@ NEXTAUTH_SECRET=your_nextauth_secret_key
 DISCORD_CLIENT_ID=your_discord_client_id
 DISCORD_CLIENT_SECRET=your_discord_client_secret
 
-# Discord Server Configuration
-# Get the server ID by right-clicking on your Discord server and selecting "Copy Server ID"
+# Discord Server / Guild Configuration
+# Avalanche guild ID for login restriction (/api/verify-guild). Optional; defaults to 1241008226598649886
+AVALANCHE_GUILD_ID=1241008226598649886
+# Legacy / debug; can match AVALANCHE_GUILD_ID
 DISCORD_SERVER_ID=1241008226598649886
 
 # Discord Webhook for Error Notifications
